# CMakeList.txt : CMake project for Extraclase_4, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Extraclase_4")

# Add source to this project's executable.
add_executable (Extraclase_4 "Extraclase_4.cpp" "Extraclase_4.h" "src/Md5.h"  "src/SHA1.h")

# TODO: Add tests and install targets if needed.
